--- a/index.html
+++ b/index.html
@@ -18,7 +18,24 @@
   </head>
 
   <body>
+    <!-- 1. Přidáme tento div, do kterého Google vloží svůj widget -->
+    <div id="google_translate_element" style="display: none;"></div>
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- 2. Přidáme skript, který widget inicializuje -->
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement({
+          pageLanguage: 'en', // Jazyk, ve kterém je vaše stránka napsaná
+          layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+          autoDisplay: false
+        }, 'google_translate_element');
+      }
+    </script>
+
+    <!-- 3. Přidáme hlavní skript od Googlu, který vše spustí -->
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   </body>
 </html>
