--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+    <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>game-nexus-launchpad</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    
+    <!-- Updated Title and Description -->
+    <title>Stingerhost - Powerful Game Server Hosting</title>
+    <meta name="description" content="High-performance game server hosting for over 80+ games. Instant setup, DDoS protection, and 24/7 support. Launch your world today!" />
+    <meta name="author" content="Stingerhost" />
 
-    <meta property="og:title" content="game-nexus-launchpad" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Updated Open Graph (OG) Tags for Discord, Facebook, etc. -->
+    <meta property="og:title" content="Stingerhost - Powerful Game Server Hosting" />
+    <meta property="og:description" content="Launch your world in seconds with our high-performance game servers." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://game-nexus-launchpad-main.vercel.app/" />
+    <meta property="og:image" content="/og-image.png" />
 
+    <!-- Updated Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
